pkg/ibmvpc/examples/out/explain_out/NACLExternal2_all_vpcs_explain.txt
Connectivity explanation between vsi1-ky[10.240.10.4] and 100.128.0.0/32
===================================================================================

No connection between vsi1-ky[10.240.10.4] and Public Internet 100.128.0.0/32; connection blocked by egress
External Router PublicGateway: public-gw-ky
Egress: security group sg1-ky allows connection (with allow rules); network ACL acl1-ky blocks connection (no relevant allow rules)

Rules details:
~~~~~~~~~~~~~~
Egress:
security group sg1-ky allows connection with the following allow rules
	index: 0, direction: outbound, protocol: all, cidr: 0.0.0.0/0
network ACL acl1-ky blocks connection since there are no relevant allow rules
